--- a/.tmux.conf
+++ b/.tmux.conf
@@ -21,8 +21,8 @@ set-option -g renumber-windows on
 set-option -g default-terminal "xterm"
 
 # ステータスバーの色を設定する
-set -g status-fg white
-set -g status-bg black
+set -g status-bg white
+set -g status-fg black
 
 # 非アクティブなウィンドウの色
 setw -g window-status-fg cyan
@@ -35,8 +35,8 @@ setw -g window-status-current-bg red
 setw -g window-status-current-attr bright
 
 # ペインボーダーの色を設定する
-set -g pane-border-fg white
-set -g pane-border-bg black
+set -g pane-border-bg white
+set -g pane-border-fg black
 # アクティブなペインを目立たせる
 set -g pane-active-border-fg red
 set -g pane-active-border-bg black
