--- a/mac/ユーザ辞書.plist
+++ b/mac/ユーザ辞書.plist
@@ -100,6 +100,12 @@
 	</dict>
 	<dict>
 		<key>phrase</key>
+		<string>(ﾟДﾟ≡ﾟдﾟ)ｴｯ!?</string>
+		<key>shortcut</key>
+		<string>えっ</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
 		<string>(*´σー｀)エヘヘ</string>
 		<key>shortcut</key>
 		<string>えへへ</string>
@@ -412,6 +418,12 @@
 	</dict>
 	<dict>
 		<key>phrase</key>
+		<string>σ(^_^;)</string>
+		<key>shortcut</key>
+		<string>かおもじ</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
 		<string>((((( ；ﾟДﾟ)))))ｶﾞｸｶﾞｸﾌﾞﾙﾌﾞﾙ</string>
 		<key>shortcut</key>
 		<string>がくぶる</string>
@@ -481,6 +493,24 @@
 		<string>(;´Д`)ｹﾞﾛｹﾞﾛ</string>
 		<key>shortcut</key>
 		<string>げろげろ</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(;・`д・́)...ｺﾞｸﾘ</string>
+		<key>shortcut</key>
+		<string>ごくり</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(ﾟAﾟ;)ｺﾞｸﾘ</string>
+		<key>shortcut</key>
+		<string>ごくり</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string> (つд⊂)ｺﾞｼｺﾞｼ</string>
+		<key>shortcut</key>
+		<string>ごしごし</string>
 	</dict>
 	<dict>
 		<key>phrase</key>
@@ -772,27 +802,129 @@
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>(ﾟДﾟ≡ﾟдﾟ)ｴｯ!?</string>
+		<string>(´；ω；｀)ｳｯ…</string>
+		<key>shortcut</key>
+		<string>うっ</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>ζ*'ヮ')ζ</string>
+		<key>shortcut</key>
+		<string>やよい</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>ζ*'ヮ')ζうっうー</string>
+		<key>shortcut</key>
+		<string>うっうー</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(∩ﾟдﾟ)ｱｰｱｰきこえなーい</string>
+		<key>shortcut</key>
+		<string>あーあー</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string> (」・ω・)」うー！(／・ω・)／にゃー！</string>
+		<key>shortcut</key>
+		<string>うーにゃー</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>( ﾟ∀ﾟ)ｱﾊﾊ八八ﾉヽﾉヽﾉヽﾉ ＼ / ＼/ ＼</string>
+		<key>shortcut</key>
+		<string>あはは</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>Σ(゜Д゜ノ)ノ</string>
 		<key>shortcut</key>
 		<string>えっ</string>
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string> (つд⊂)ｺﾞｼｺﾞｼ</string>
+		<string>Σ(゜Д゜;)</string>
 		<key>shortcut</key>
-		<string>ごしごし</string>
+		<string>えっ</string>
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>(;・`д・́)...ｺﾞｸﾘ</string>
+		<string>(/ω＼)</string>
 		<key>shortcut</key>
-		<string>ごくり</string>
+		<string>きゃー</string>
 	</dict>
 	<dict>
 		<key>phrase</key>
-		<string>(ﾟAﾟ;)ｺﾞｸﾘ</string>
+		<string>⊂('ω`⊂ 三</string>
 		<key>shortcut</key>
-		<string>ごくり</string>
+		<string>ずさー</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>壁|ω・）</string>
+		<key>shortcut</key>
+		<string>じー</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>|д・)</string>
+		<key>shortcut</key>
+		<string>じー</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(｀･ω･´)ｼｬｷｰﾝ</string>
+		<key>shortcut</key>
+		<string>しゃきーん</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>（//∇//）</string>
+		<key>shortcut</key>
+		<string>てれ</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>┣¨┣¨┣¨┣¨┣¨┣¨┣¨┣¨┣¨┣¨┣¨┣¨┣¨</string>
+		<key>shortcut</key>
+		<string>どどど</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(*´･ω･)(･ω･｀*)ﾈｰ</string>
+		<key>shortcut</key>
+		<string>ねー</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(:3 っ)っ</string>
+		<key>shortcut</key>
+		<string>ねる</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(´・ω・)σ)Д`)</string>
+		<key>shortcut</key>
+		<string>ぷに</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>(⑅´∀`)σ)∀`*)</string>
+		<key>shortcut</key>
+		<string>ぷに</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>ヽ('ω')ﾉ三ヽ('ω')ﾉ</string>
+		<key>shortcut</key>
+		<string>もうしわけねえ</string>
+	</dict>
+	<dict>
+		<key>phrase</key>
+		<string>／人◕‿‿◕人＼</string>
+		<key>shortcut</key>
+		<string>わけがわからないよ</string>
 	</dict>
 </array>
 </plist>
