--- a/mac/com.googlecode.iterm2.plist
+++ b/mac/com.googlecode.iterm2.plist
@@ -9393,7 +9393,7 @@
 	<key>MaxVertically</key>
 	<false/>
 	<key>NSNavLastRootDirectory</key>
-	<string>~/Desktop/repository/SettingFiles</string>
+	<string>~/Desktop/repository/iTerm2-Color-Schemes/schemes</string>
 	<key>NSQuotedKeystrokeBinding</key>
 	<string></string>
 	<key>NSRepeatCountBinding</key>
@@ -9401,9 +9401,15 @@
 	<key>NSScrollAnimationEnabled</key>
 	<false/>
 	<key>NSWindow Frame Preferences</key>
-	<string>970 357 924 485 0 0 1920 1058 </string>
+	<string>314 226 924 485 0 0 1280 777 </string>
+	<key>NSWindow Frame SUStatusFrame</key>
+	<string>896 621 384 129 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>2001 109 1372 824 1920 -120 1920 1178 </string>
+	<string>132 60 610 712 0 0 1280 777 </string>
+	<key>NSWindow Frame iTerm Window 1</key>
+	<string>79 64 625 714 0 0 1280 778 </string>
+	<key>NSWindow Frame iTerm Window 2</key>
+	<string>173 64 625 714 0 0 1280 778 </string>
 	<key>NeverWarnAboutShortLivedSessions_6DE05245-ABC6-4133-86ED-9837935D9C3A</key>
 	<true/>
 	<key>New Bookmarks</key>
@@ -9418,146 +9424,146 @@
 			<key>Ansi 0 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.45882353186607361</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.45882353186607361</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.45882353186607361</real>
 			</dict>
 			<key>Ansi 1 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.30196079611778259</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.364705890417099</real>
 				<key>Red Component</key>
-				<real>0.60000002384185791</real>
+				<real>0.50980395078659058</real>
 			</dict>
 			<key>Ansi 10 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.66666668653488159</real>
 				<key>Green Component</key>
 				<real>0.85098040103912354</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.59607845544815063</real>
 			</dict>
 			<key>Ansi 11 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.61568629741668701</real>
 				<key>Green Component</key>
-				<real>0.89803922176361084</real>
+				<real>0.90588235855102539</real>
 				<key>Red Component</key>
-				<real>0.89803922176361084</real>
+				<real>0.98039215803146362</real>
 			</dict>
 			<key>Ansi 12 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.81176471710205078</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.76470589637756348</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.47843137383460999</real>
 			</dict>
 			<key>Ansi 13 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.89803922176361084</real>
+				<real>0.63137257099151611</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.69803923368453979</real>
 				<key>Red Component</key>
-				<real>0.89803922176361084</real>
+				<real>0.83921569585800171</real>
 			</dict>
 			<key>Ansi 14 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.89803922176361084</real>
+				<real>0.87843137979507446</real>
 				<key>Green Component</key>
-				<real>0.89803922176361084</real>
+				<real>0.87843137979507446</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.67843139171600342</real>
 			</dict>
 			<key>Ansi 15 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.89803922176361084</real>
+				<real>0.87843137979507446</real>
 				<key>Green Component</key>
-				<real>0.89803922176361084</real>
+				<real>0.87843137979507446</real>
 				<key>Red Component</key>
-				<real>0.89803922176361084</real>
+				<real>0.87843137979507446</real>
 			</dict>
 			<key>Ansi 2 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.38431373238563538</real>
 				<key>Green Component</key>
-				<real>0.65098041296005249</real>
+				<real>0.54901963472366333</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.44705882668495178</real>
 			</dict>
 			<key>Ansi 3 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.42745098471641541</real>
 				<key>Green Component</key>
-				<real>0.60000002384185791</real>
+				<real>0.63137257099151611</real>
 				<key>Red Component</key>
-				<real>0.60000002384185791</real>
+				<real>0.67843139171600342</real>
 			</dict>
 			<key>Ansi 4 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.69803923368453979</real>
+				<real>0.50980395078659058</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.48235294222831726</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.30196079611778259</real>
 			</dict>
 			<key>Ansi 5 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.69803923368453979</real>
+				<real>0.40392157435417175</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.44705882668495178</real>
 				<key>Red Component</key>
-				<real>0.69803923368453979</real>
+				<real>0.54117649793624878</real>
 			</dict>
 			<key>Ansi 6 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.69803923368453979</real>
+				<real>0.58039218187332153</real>
 				<key>Green Component</key>
-				<real>0.65098041296005249</real>
+				<real>0.58039218187332153</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.44705882668495178</real>
 			</dict>
 			<key>Ansi 7 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.74901962280273438</real>
+				<real>0.87843137979507446</real>
 				<key>Green Component</key>
-				<real>0.74901962280273438</real>
+				<real>0.87843137979507446</real>
 				<key>Red Component</key>
-				<real>0.74901962280273438</real>
+				<real>0.87843137979507446</real>
 			</dict>
 			<key>Ansi 8 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.54117649793624878</real>
 				<key>Green Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.54117649793624878</real>
 				<key>Red Component</key>
-				<real>0.40000000596046448</real>
+				<real>0.54117649793624878</real>
 			</dict>
 			<key>Ansi 9 Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.47843137383460999</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.57647061347961426</real>
 				<key>Red Component</key>
-				<real>0.89803922176361084</real>
+				<real>0.81176471710205078</real>
 			</dict>
 			<key>Automatically Log</key>
 			<false/>
@@ -9566,11 +9572,11 @@
 			<key>Background Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>1</real>
+				<real>0.20784313976764679</real>
 				<key>Green Component</key>
-				<real>1</real>
+				<real>0.20392157137393951</real>
 				<key>Red Component</key>
-				<real>1</real>
+				<real>0.14117647707462311</real>
 			</dict>
 			<key>Background Image Is Tiled</key>
 			<false/>
@@ -9589,11 +9595,11 @@
 			<key>Bold Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.56470590829849243</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.53333336114883423</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.39215686917304993</real>
 			</dict>
 			<key>Character Encoding</key>
 			<integer>4</integer>
@@ -9606,20 +9612,20 @@
 			<key>Cursor Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.49803921580314636</real>
+				<real>0.47843137383460999</real>
 				<key>Green Component</key>
-				<real>0.49803921580314636</real>
+				<real>0.39215686917304993</real>
 				<key>Red Component</key>
-				<real>0.49803921580314636</real>
+				<real>0.34117648005485535</real>
 			</dict>
 			<key>Cursor Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.19607843458652496</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.19607843458652496</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.19607843458652496</real>
 			</dict>
 			<key>Cursor Type</key>
 			<integer>0</integer>
@@ -9640,11 +9646,11 @@
 			<key>Foreground Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.83137255907058716</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.90588235855102539</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.83137255907058716</real>
 			</dict>
 			<key>Guid</key>
 			<string>6DE05245-ABC6-4133-86ED-9837935D9C3A</string>
@@ -10000,20 +10006,20 @@
 			<key>Selected Text Color</key>
 			<dict>
 				<key>Blue Component</key>
-				<real>0.0</real>
+				<real>0.074509806931018829</real>
 				<key>Green Component</key>
-				<real>0.0</real>
+				<real>0.54509806632995605</real>
 				<key>Red Component</key>
-				<real>0.0</real>
+				<real>0.61960786581039429</real>
 			</dict>
 			<key>Selection Color</key>
 			<dict>
 				<key>Blue Component</key>
 				<real>1</real>
 				<key>Green Component</key>
-				<real>0.78823530673980713</real>
+				<real>1</real>
 				<key>Red Component</key>
-				<real>0.64313727617263794</real>
+				<real>1</real>
 			</dict>
 			<key>Semantic History</key>
 			<dict>
@@ -10890,9 +10896,9 @@
 		</dict>
 	</array>
 	<key>NoSyncTimeOfLastPromo</key>
-	<real>453704779.99791902</real>
+	<real>454180854.50632799</real>
 	<key>NoSyncTimeOfLastPromoDownload</key>
-	<real>455809144.81675899</real>
+	<real>456509375.10561103</real>
 	<key>OnlyWhenMoreTabs</key>
 	<false/>
 	<key>OpenArrangementAtStartup</key>
@@ -10941,7 +10947,7 @@
 		</dict>
 	</dict>
 	<key>PrefsCustomFolder</key>
-	<string>/Users/a13596/Desktop/repository/SettingFiles/mac</string>
+	<string>~/Desktop/repository/SettingFiles/mac/</string>
 	<key>PromptOnClose</key>
 	<true/>
 	<key>PromptOnQuit</key>
@@ -10959,7 +10965,7 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2015-06-12T11:48:36Z</date>
+	<date>2015-06-20T16:09:35Z</date>
 	<key>SavePasteHistory</key>
 	<false/>
 	<key>Show Toolbelt</key>
