--- a/gitfiles/.gitconfig
+++ b/gitfiles/.gitconfig
@@ -125,15 +125,16 @@
     cmd = mvim -f -d \"$LOCAL\" \"$REMOTE\"
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path = 
+	path =
 [merge]
 	; tool = vimdiff2
 	tool = mvimdiff
 [mergetool "mvimdiff"]
-    cmd = mvim -f -d \"$LOCAL\" \"$MERGED\" \"$REMOTE\"
+  cmd = mvim -f -d \"$LOCAL\" \"$MERGED\" \"$REMOTE\"
+	keepBackup = false
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
-	trustExitCode = true
+	; trustExitCode = true
 [i18n]
 	commitencoding = utf-8
 [mergetool]
