gitのブランチ削除関係のエイリアス修正

--- a/gitfiles/.gitconfig
+++ b/gitfiles/.gitconfig
@@ -125,7 +125,7 @@
     cmd = mvim -f -d \"$LOCAL\" \"$REMOTE\"
 [difftool "sourcetree"]
 	cmd = opendiff \"$LOCAL\" \"$REMOTE\"
-	path =
+	path = 
 [merge]
 	; tool = vimdiff2
 	tool = mvimdiff
@@ -134,6 +134,7 @@
 	keepBackup = false
 [mergetool "sourcetree"]
 	cmd = /Applications/SourceTree.app/Contents/Resources/opendiff-w.sh \"$LOCAL\" \"$REMOTE\" -ancestor \"$BASE\" -merge \"$MERGED\"
+	trustExitCode = true
 	; trustExitCode = true
 [i18n]
 	commitencoding = utf-8
